<package>
  <name>opengv_catkin</name>
  <version>0.0.1</version>
  <description>OpenGV library</description>
  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
